tests/invalid/double_define.c
int main() {
    {
        int a;
        int a;
    }
}
// ERROR: Line 4, Error 3004